logs/scheduler/2021-07-18/book (1).py.log
[2021-07-18 22:11:57,776] {scheduler_job.py:181} INFO - Started process (PID=17145) to work on /opt/airflow/dags/book (1).py
[2021-07-18 22:11:57,779] {scheduler_job.py:632} INFO - Processing file /opt/airflow/dags/book (1).py for tasks to queue
[2021-07-18 22:11:57,783] {logging_mixin.py:104} INFO - [2021-07-18 22:11:57,780] {dagbag.py:496} INFO - Filling up the DagBag from /opt/airflow/dags/book (1).py
[2021-07-18 22:11:57,807] {logging_mixin.py:104} INFO - [2021-07-18 22:11:57,805] {dagbag.py:329} ERROR - Failed to import: /opt/airflow/dags/book (1).py
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.6/site-packages/airflow/models/dagbag.py", line 326, in _load_modules_from_file
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 674, in exec_module
  File "<frozen importlib._bootstrap_external>", line 781, in get_code
  File "<frozen importlib._bootstrap_external>", line 741, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/opt/airflow/dags/book (1).py", line 54
    password=input"TESTpassword"
                               ^
SyntaxError: invalid syntax
[2021-07-18 22:11:57,816] {scheduler_job.py:644} WARNING - No viable dags retrieved from /opt/airflow/dags/book (1).py
[2021-07-18 22:11:57,895] {scheduler_job.py:189} INFO - Processing /opt/airflow/dags/book (1).py took 0.124 seconds
